--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^19.0.0",
     "react-router": "^7.4.1",
     "react-router-dom": "^7.4.1",
+    "react-tabs": "^6.1.0",
+    "recharts": "^2.15.3",
     "tailwindcss": "^4.1.0"
   },
   "devDependencies": {
